# contrib-pgsql-plugin

./: .gitignore  CMakeLists.txt  CPack.cmake.in  pgsql-fd.c  utils.h
cmake/: FindBareos.cmake  FindPostgreSQL.cmake  ParseLibtoolFile.cmake
